rnsc/tests/snapshots/general-HelloWorld.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class public HelloWorld
.super java/lang/Object

.method public <init> ()V
    .code stack 10 locals 10
      aload_0
      invokespecial java/lang/Object <init> ()V
      return
    .code_end
.method_end

.method static main ([Ljava/lang/String;)V
    .code stack 2 locals 1
      getstatic java/lang/System out Ljava/io/PrintStream;
      ldc "Hello World!"
      invokevirtual java/io/PrintStream println (Ljava/lang/String;)V
      return
    .code_end
.method_end
.class_end
----- INPUT -----
.class public HelloWorld
.super java/lang/Object

.method public <init> ()V
    .code stack 10 locals 10
      aload_0
      invokespecial java/lang/Object <init> ()V
      return
    .code_end
.method_end

.method static main ([Ljava/lang/String;)V
    .code stack 2 locals 1
      getstatic java/lang/System out Ljava/io/PrintStream;
      ldc @string "Hello World!"
      invokevirtual java/io/PrintStream println (Ljava/lang/String;)V
      return
    .code_end
.method_end
.class_end
----- STDERR -----

----- JAVAP -----
Classfile <TEMP_DIR>/HelloWorld.class
  Last modified <DATE>; size 341 bytes
  SHA-256 checksum fc2b4ce00dfcc43f3132ae3f873111945c9bf6216b99f79a1272e992bb0bc274
public class HelloWorld
  minor version: 0
  major version: 69
  flags: (0x0001) ACC_PUBLIC
  this_class: #3                          // HelloWorld
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 2, attributes: 0
Constant pool:
   #1 = Class              #2             // java/lang/Object
   #2 = Utf8               java/lang/Object
   #3 = Class              #4             // HelloWorld
   #4 = Utf8               HelloWorld
   #5 = Utf8               <init>
   #6 = Utf8               ()V
   #7 = Methodref          #1.#8          // java/lang/Object."<init>":()V
   #8 = NameAndType        #5:#6          // "<init>":()V
   #9 = Utf8               main
  #10 = Utf8               ([Ljava/lang/String;)V
  #11 = Fieldref           #12.#13        // java/lang/System.out:Ljava/io/PrintStream;
  #12 = Class              #14            // java/lang/System
  #13 = NameAndType        #15:#16        // out:Ljava/io/PrintStream;
  #14 = Utf8               java/lang/System
  #15 = Utf8               out
  #16 = Utf8               Ljava/io/PrintStream;
  #17 = String             #18            // Hello World!
  #18 = Utf8               Hello World!
  #19 = Methodref          #20.#21        // java/io/PrintStream.println:(Ljava/lang/String;)V
  #20 = Class              #22            // java/io/PrintStream
  #21 = NameAndType        #23:#24        // println:(Ljava/lang/String;)V
  #22 = Utf8               java/io/PrintStream
  #23 = Utf8               println
  #24 = Utf8               (Ljava/lang/String;)V
  #25 = Utf8               Code
{
  public HelloWorld();
    descriptor: ()V
    flags: (0x0001) ACC_PUBLIC
    Code:
      stack=10, locals=10, args_size=1
         0: aload_0
         1: invokespecial #7                  // Method java/lang/Object."<init>":()V
         4: return

  static void main(java.lang.String[]);
    descriptor: ([Ljava/lang/String;)V
    flags: (0x0008) ACC_STATIC
    Code:
      stack=2, locals=1, args_size=1
         0: getstatic     #11                 // Field java/lang/System.out:Ljava/io/PrintStream;
         3: ldc           #17                 // String Hello World!
         5: invokevirtual #19                 // Method java/io/PrintStream.println:(Ljava/lang/String;)V
         8: return
}
