rnsc/tests/snapshots/general-MultipleMethods.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class MultipleMethods
.super java/lang/Object

.method public <init> ()V
    .code stack 1 locals 1
      aload_0
      invokespecial java/lang/Object <init> ()V
      return
    .code_end
.method_end

.method public static main ([Ljava/lang/String;)V
    .code stack 2 locals 1
      getstatic java/lang/System out Ljava/io/PrintStream;
      ldc "Hello"
      invokevirtual java/io/PrintStream println (Ljava/lang/String;)V
      return
    .code_end
.method_end

.method private helper ()I
    .code stack 1 locals 0
      bipush 42
      ireturn
    .code_end
.method_end
.class_end
----- INPUT -----
.class MultipleMethods
.super java/lang/Object

.method public <init> ()V
  .code stack 1 locals 1
    aload_0
    invokespecial @methodref java/lang/Object <init> ()V
    return
  .code_end
.method_end

.method public static main ([Ljava/lang/String;)V
  .code stack 2 locals 1
    getstatic @fieldref java/lang/System out Ljava/io/PrintStream;
    ldc @string "Hello"
    invokevirtual @methodref java/io/PrintStream println (Ljava/lang/String;)V
    return
  .code_end
.method_end

.method private helper ()I
  .code stack 1 locals 0
    bipush 42
    ireturn
  .code_end
.method_end
.class_end
----- STDERR -----

----- JAVAP -----
Classfile <TEMP_DIR>/MultipleMethods.class
  Last modified <DATE>; size 383 bytes
  SHA-256 checksum 4cf69e3650a8b4511eee472aae840b831dfe57bc9f2348762aab289ccaac377d
class MultipleMethods
  minor version: 0
  major version: 69
  flags: (0x0000)
  this_class: #3                          // MultipleMethods
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 3, attributes: 0
Constant pool:
   #1 = Class              #2             // java/lang/Object
   #2 = Utf8               java/lang/Object
   #3 = Class              #4             // MultipleMethods
   #4 = Utf8               MultipleMethods
   #5 = Utf8               <init>
   #6 = Utf8               ()V
   #7 = Methodref          #1.#8          // java/lang/Object."<init>":()V
   #8 = NameAndType        #5:#6          // "<init>":()V
   #9 = Utf8               Code
  #10 = Utf8               main
  #11 = Utf8               ([Ljava/lang/String;)V
  #12 = Fieldref           #13.#14        // java/lang/System.out:Ljava/io/PrintStream;
  #13 = Class              #15            // java/lang/System
  #14 = NameAndType        #16:#17        // out:Ljava/io/PrintStream;
  #15 = Utf8               java/lang/System
  #16 = Utf8               out
  #17 = Utf8               Ljava/io/PrintStream;
  #18 = String             #19            // Hello
  #19 = Utf8               Hello
  #20 = Methodref          #21.#22        // java/io/PrintStream.println:(Ljava/lang/String;)V
  #21 = Class              #23            // java/io/PrintStream
  #22 = NameAndType        #24:#25        // println:(Ljava/lang/String;)V
  #23 = Utf8               java/io/PrintStream
  #24 = Utf8               println
  #25 = Utf8               (Ljava/lang/String;)V
  #26 = Utf8               helper
  #27 = Utf8               ()I
{
  public MultipleMethods();
    descriptor: ()V
    flags: (0x0001) ACC_PUBLIC
    Code:
      stack=1, locals=1, args_size=1
         0: aload_0
         1: invokespecial #7                  // Method java/lang/Object."<init>":()V
         4: return

  public static void main(java.lang.String[]);
    descriptor: ([Ljava/lang/String;)V
    flags: (0x0009) ACC_PUBLIC, ACC_STATIC
    Code:
      stack=2, locals=1, args_size=1
         0: getstatic     #12                 // Field java/lang/System.out:Ljava/io/PrintStream;
         3: ldc           #18                 // String Hello
         5: invokevirtual #20                 // Method java/io/PrintStream.println:(Ljava/lang/String;)V
         8: return

  private int helper();
    descriptor: ()I
    flags: (0x0002) ACC_PRIVATE
    Code:
      stack=1, locals=0, args_size=1
         0: bipush        42
         2: ireturn
}
