rnsc/tests/snapshots/general-class_body-missing_class_end.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class MyClass
.super java/lang/Object

.class_end
----- INPUT -----
.class MyClass
.super java/lang/Object
----- STDERR -----

----- JAVAP -----
Classfile <TEMP_DIR>/MyClass.class
  Last modified <DATE>; size 59 bytes
  SHA-256 checksum 2b205fd1883fe3c2f99b8c2bc3d36b69eed70992bb07cc580e9067249242c0d7
class MyClass
  minor version: 0
  major version: 69
  flags: (0x0000)
  this_class: #3                          // MyClass
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 0, attributes: 0
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // MyClass
  #4 = Utf8               MyClass
{
}
