rnsc/tests/snapshots/general-inner_class-inner_classes_attr_standalone.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class public Main
.super java/lang/Object

.class_end
----- INPUT -----
; Tests .inner_classes_attr without .inner block generates standalone InnerClasses entry.

.class public Main
.super java/lang/Object

.inner_classes_attr
    .inner_class com/profs/Main
    .outer_class com/profs/Main
    .flags public static
    .inner_name NestedClass
.inner_classes_attr_end

.class_end
----- STDERR -----

----- JAVAP -----
Classfile <TEMP_DIR>/Main.class
  Last modified <DATE>; size 121 bytes
  SHA-256 checksum 0b3b69dae65aa85dcd8768b6996e5c2b8f68fdc068ea45e8d8c004a3a44d0194
public class Main
  minor version: 0
  major version: 69
  flags: (0x0001) ACC_PUBLIC
  this_class: #3                          // Main
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 0, attributes: 1
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // Main
  #4 = Utf8               Main
  #5 = Utf8               InnerClasses
  #6 = Class              #7              // com/profs/Main
  #7 = Utf8               com/profs/Main
  #8 = Utf8               NestedClass
{
}
InnerClasses:
  public static #8= #6 of #6;             // NestedClass=class com/profs/Main of class com/profs/Main
