rnsc/tests/snapshots/general-inner_class-inner_name_explicit_class.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class public Main
.super java/lang/Object

.class_end
----- INPUT -----
; Tests that .inner_name with explicit @class type hint stores inner name as Class instead of Utf8.
; Expected: success, javap shows Class entry for inner name

.class public Main
.super java/lang/Object

.inner_classes_attr
    .inner_class com/profs/Main
    .outer_class com/profs/Main
    .flags public static
    .inner_name @class NestedClass
.inner_classes_attr_end

.class_end
----- STDERR -----

----- JAVAP -----
Classfile <TEMP_DIR>/Main.class
  Last modified <DATE>; size 124 bytes
  SHA-256 checksum 17a547eab6db5dec46188afe6385839220960a01cbb269a31f7e0e781b1cc107
public class Main
  minor version: 0
  major version: 69
  flags: (0x0001) ACC_PUBLIC
  this_class: #3                          // Main
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 0, attributes: 1
Constant pool:
   #1 = Class              #2             // java/lang/Object
   #2 = Utf8               java/lang/Object
   #3 = Class              #4             // Main
   #4 = Utf8               Main
   #5 = Utf8               InnerClasses
   #6 = Class              #7             // com/profs/Main
   #7 = Utf8               com/profs/Main
   #8 = Class              #9             // NestedClass
   #9 = Utf8               NestedClass
{
}
Error: Not a Utf8Entry at index: 8
